--- a/practice-Message.html
+++ b/practice-Message.html
@@ -14,7 +14,7 @@
 <p></p>
 <p>Leave some messgae for me!Thanks!</p>
 <p></p>
-<p>Write something:</p>
+<p>Write something:Hello!你好!我是你的同班同學，我的名字叫謝瑩瀞，很高興認識你，耶耶耶耶耶耶耶耶耶耶~</p>
 
 <p> <a href="C:\Users\chris yeh\Desktop\practice-Home.html">Home Page</a> </p>
 <p> <a href="C:\Users\chris yeh\Desktop\practice-Introduction.html">Information About ME</a> </p>
