--- a/comment.html
+++ b/comment.html
@@ -7,6 +7,8 @@
 <body>
 
 <h1>別人對我說的話</h1>
+<p>thanks for helping!!  By 吳明壎 第14組</p>
+
 <a href="index.html">首頁</a>
 <a href="introduction.html">個人介紹</a>
 <a href="comment.html">別人對我說的話</a>
